Move uring interface