@@ -9,6 +9,7 @@
     <version>0.1.0-SNAPSHOT</version>
     <modules>
         <module>core</module>
+        <module>proactor</module>
     </modules>
 
     <packaging>pom</packaging>
@@ -36,6 +37,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.release>17</java.release>
+        <java.enable-preview>--enable-preview</java.enable-preview>
 
         <!-- Testing -->
         <junit.version>5.7.0</junit.version>
@@ -130,11 +132,15 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <compilerArgs>--enable-preview</compilerArgs>
                     <showDeprecation>true</showDeprecation>
                     <showWarnings>true</showWarnings>
                     <source>${java.release}</source>
                     <target>${java.release}</target>
+                    <compilerArgs>
+                        <arg>${java.enable-preview}</arg>
+                        <arg>--add-exports</arg>
+                        <arg>java.base/jdk.internal.misc=ALL-UNNAMED</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
 
